[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/custom.gd" type="Script" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://resources/sounds/mixkit-retro-arcade-casino-notification-211.mp3" type="AudioStream" id=3]
[ext_resource path="res://resources/circle.png" type="Texture" id=4]
[ext_resource path="res://resources/Oswald-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://resources/audio_on.png" type="Texture" id=6]
[ext_resource path="res://resources/gift.png" type="Texture" id=7]
[ext_resource path="res://resources/audio_off.png" type="Texture" id=8]

[sub_resource type="Environment" id=13]
background_mode = 4
background_canvas_max_layer = 5
glow_enabled = true
glow_blend_mode = 0
glow_hdr_threshold = 1.27
glow_high_quality = true

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 144 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "shake"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 144 ), Vector2( -10, 144 ), Vector2( 0, 144 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 21
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 13 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
cols = [ Color( 1.2, 1.2, 1.2, 1 ), Color( 1.2, 0, 0, 1 ), Color( 0, 1.2, 0, 1 ), Color( 0, 0, 1.2, 1 ), Color( 1.2, 1, 0, 1 ), Color( 0, 1.2, 1.2, 1 ), Color( 1.2, 0, 1.2, 1 ), Color( 1.2, 0.8, 0, 1 ) ]

[node name="Control" type="Control" parent="CanvasLayer/Control/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/Control"]
modulate = Color( 1.3, 1.3, 1.3, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -157.0
margin_top = 80.0
margin_right = 158.0
margin_bottom = 149.0
custom_fonts/font = SubResource( 4 )
text = "DASH"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MarginContainer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -81.0
margin_right = 105.0
margin_bottom = 280.0
__meta__ = {
"_edit_group_": true
}

[node name="play_button" type="Button" parent="CanvasLayer/Control/MarginContainer/Control/VBoxContainer"]
modulate = Color( 1.4, 1.4, 1.6, 1 )
margin_right = 200.0
margin_bottom = 140.0
rect_min_size = Vector2( 200, 140 )
custom_fonts/font = SubResource( 1 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="color_button" type="Button" parent="CanvasLayer/Control/MarginContainer/Control/VBoxContainer"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
margin_top = 144.0
margin_right = 200.0
margin_bottom = 344.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 0
size_flags_horizontal = 0
size_flags_vertical = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CanvasLayer/Control/MarginContainer/Control/VBoxContainer/color_button"]
position = Vector2( 95, 105 )
scale = Vector2( 1.58779, 1.58779 )
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Control/MarginContainer/Control/VBoxContainer/color_button"]
anims/RESET = SubResource( 5 )
anims/shake = SubResource( 6 )

[node name="custom" type="Button" parent="CanvasLayer/Control/MarginContainer/Control"]
modulate = Color( 1.01, 1.01, 1.01, 1 )
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 123.0
margin_top = 78.0
margin_right = 258.0
margin_bottom = 212.0
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 7 )
flat = true
expand_icon = true
script = ExtResource( 1 )

[node name="Label" type="Label" parent="CanvasLayer/Control/MarginContainer/Control/custom"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -177.5
margin_top = -18.0
margin_right = 164.5
margin_bottom = 27.0
custom_fonts/font = SubResource( 7 )
text = "Locked"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/MarginContainer/Control/custom"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -97.5
margin_top = -73.0
margin_right = 82.5
margin_bottom = 2.0
custom_fonts/font = SubResource( 10 )
text = "Custom"
align = 1

[node name="ppolicy" type="Button" parent="CanvasLayer/Control/MarginContainer/Control"]
modulate = Color( 1.8, 1.8, 1.8, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -246.0
margin_top = -142.0
margin_right = -27.0
margin_bottom = -40.0
focus_mode = 0
custom_fonts/font = SubResource( 11 )
toggle_mode = true
enabled_focus_mode = 0
text = "PRIVACY POLICY"
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/Control/MarginContainer/Control/ppolicy"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.5
margin_top = -49.0
margin_right = 122.5
margin_bottom = -4.0
custom_fonts/font = SubResource( 12 )
text = "We don't collect any thing.
Made with Godot"
align = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Control/MarginContainer/Control"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = -96.0
margin_right = 96.0
margin_bottom = -11.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
expand = true

[connection signal="button_down" from="CanvasLayer/Control/MarginContainer/Control/VBoxContainer/play_button" to="CanvasLayer/Control/MarginContainer" method="_on_Button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/MarginContainer/Control/VBoxContainer/color_button" to="CanvasLayer/Control/MarginContainer" method="_on_color_button_button_down"]
[connection signal="button_down" from="CanvasLayer/Control/MarginContainer/Control/custom" to="CanvasLayer/Control/MarginContainer/Control/custom" method="_on_custom_button_down"]
[connection signal="toggled" from="CanvasLayer/Control/MarginContainer/Control/ppolicy" to="CanvasLayer/Control/MarginContainer" method="_on_ppolicy_toggled"]
[connection signal="toggled" from="CanvasLayer/Control/MarginContainer/Control/TextureButton" to="CanvasLayer/Control/MarginContainer" method="_on_TextureButton_toggled"]
